5/25/11 remove voltage attribute from wire model
5/25/11 implement voltage computation for wires in Combination2 circuit
5/25/11 implement voltage computation for wires in Combination1 circuit
5/25/11 implement voltage computation for wires in Parallel circuits
5/25/11 implement voltage computation for wires in Series circuits
5/25/11 use ArrayList<Wire> in "Single" circuit, so that it's like the other circuits and can be more easily refactored
5/25/11 add debug shapes to Multiple Capacitors tab
5/25/11 generalize EFieldShapesDebugNode to work with any ICircuit
5/25/11 generalize VoltageShapesDebugNode to work with any ICircuit
5/19/11 create a circuit node (DielectricCircuitNode) for the circuit in "Dielectric" tab
5/19/11 remove dependency on DielectricModel in shape debug nodes
5/19/11 move dielectric visibility handling into CapacitorNode
5/19/11 delete ICapacitor, only need one type
5/19/11 collapsed circuit node type hierarchy into a single general node that handles all circuit types
5/19/11 move creation of capacitor nodes to circuit node base class
5/19/11 simplify implementation of SeriesCircuitNode, rendering order is not important because wire shapes account for occlusion
5/19/11 add varargs versions of wire constructors, to improve usage readability
# 1.00.05 (52159) May 18, 2011
5/18/11 demonstrate progress on Multiple Capacitors tab
5/18/11 tweak capacitance range for Multiple Capacitors tab
5/18/11 add wires to combo circuits 2 (model and view)
5/18/11 add wires to combo circuits 1 (model and view)
5/18/11 generalize wires for connecting battery to parallel capacitors
5/18/11 add wires to parallel circuits (model and view)
5/18/11 add wires to series circuits (model and view)
5/18/11 create general capacitor-to-capacitor wire
5/18/11 create model.wire package and factor out some reusable wires
5/18/11 center current indicators on wires in "single" circuit
5/18/11 display wires in "single" circuit